; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/netdevsim/extr_fib.c_nsim_fib_rule_account.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/netdevsim/extr_fib.c_nsim_fib_rule_account.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nsim_fib_entry = type { i64, i64 }
%struct.netlink_ext_ack = type { i32 }

@ENOSPC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"Exceeded number of supported fib rule entries\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nsim_fib_entry*, i32, %struct.netlink_ext_ack*)* @nsim_fib_rule_account to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nsim_fib_rule_account(%struct.nsim_fib_entry* %0, i32 %1, %struct.netlink_ext_ack* %2) #0 {
  %4 = alloca %struct.nsim_fib_entry*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.netlink_ext_ack*, align 8
  %7 = alloca i32, align 4
  store %struct.nsim_fib_entry* %0, %struct.nsim_fib_entry** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.netlink_ext_ack* %2, %struct.netlink_ext_ack** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %3
  %11 = load %struct.nsim_fib_entry*, %struct.nsim_fib_entry** %4, align 8
  %12 = getelementptr inbounds %struct.nsim_fib_entry, %struct.nsim_fib_entry* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.nsim_fib_entry*, %struct.nsim_fib_entry** %4, align 8
  %15 = getelementptr inbounds %struct.nsim_fib_entry, %struct.nsim_fib_entry* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp slt i64 %13, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %10
  %19 = load %struct.nsim_fib_entry*, %struct.nsim_fib_entry** %4, align 8
  %20 = getelementptr inbounds %struct.nsim_fib_entry, %struct.nsim_fib_entry* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, 1
  store i64 %22, i64* %20, align 8
  br label %28

23:                                               ; preds = %10
  %24 = load i32, i32* @ENOSPC, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %7, align 4
  %26 = load %struct.netlink_ext_ack*, %struct.netlink_ext_ack** %6, align 8
  %27 = call i32 @NL_SET_ERR_MSG_MOD(%struct.netlink_ext_ack* %26, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  br label %28

28:                                               ; preds = %23, %18
  br label %34

29:                                               ; preds = %3
  %30 = load %struct.nsim_fib_entry*, %struct.nsim_fib_entry** %4, align 8
  %31 = getelementptr inbounds %struct.nsim_fib_entry, %struct.nsim_fib_entry* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = add nsw i64 %32, -1
  store i64 %33, i64* %31, align 8
  br label %34

34:                                               ; preds = %29, %28
  %35 = load i32, i32* %7, align 4
  ret i32 %35
}

declare dso_local i32 @NL_SET_ERR_MSG_MOD(%struct.netlink_ext_ack*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
